--- a/coder/public/index.html
+++ b/coder/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>hes.ico">
     <title>buctcoder</title>
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1857567_jnei58wsr7e.css">
   </head>
